<resources>
    <string name="app_name">Looking for U</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success">Success!</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="do_you_forget_your_password">Do You forgot your password?</string>
    <string name="reset_here">Reset here</string>
    <string name="sing_up">Sing Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="plus_91">+91</string>
    <string name="enter_code">Enter Code</string>
    <string name="next">Next</string>
    <string name="Update">Update</string>
    <string name="UpdateNote">A brand new version of the Looking for you app is available in the Play Store. Please update your app to use all of our amazing features</string>
    <string name="upload_profile">Upload Profile</string>
    <string name="full_name">Full Name</string>
    <string name="study">Study</string>
    <string name="location">Location</string>
    <string name="email_id">Email Id</string>
    <string name="english">English</string>
    <string name="telugu">Telugu</string>
    <string name="hindi">Hindi</string>
    <string name="height">Height</string>
    <string name="continue_tag">Continue</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="subscription">Subscription</string>
    <string name="get_started">Get Started</string>
    <string name="benefits_includes">Benefits includes</string>
    <string name="benefits_includes_text">Choose our premium packages and unlock a world of possibilities. Find your perfect match faster with exclusive features!</string>
    <string name="all_location">All Location</string>
    <string name="for_tag">for</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_my_account">My Account</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_walet">Wallet</string>
    <string name="menu_title_help">Help</string>
    <string name="likes_liked"><![CDATA["Likes & Liked "]]></string>
    <string name="manage_subcription">Manage Subscriptions</string>
    <string name="payment">Payment</string>
    <string name="message_options">Message Options</string>
    <string name="manage_matches">Manage Matches</string>
    <string name="privacy_options">Privacy Options</string>
    <string name="delete_account">Delete Account</string>
    <string name="safety">Safety</string>
    <string name="help_center">Help Center</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="read_terms_conditions"><![CDATA[Read and Accept Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="subject">Subject</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="sample_amount">\u20B9 2,562</string>
    <string name="transactions">Transactions</string>
    <string name="withdraw">Withdraw</string>
    <string name="ruppe">\u20B9</string>
    <string name="reason">Reason</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="confirm_account_number">Confirm Account Number</string>
    <string name="account_number">Account Number</string>
    <string name="branch">Branch</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="date">Date</string>
    <string name="payment_source">Payment Source</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="archive">Archive Conversation</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="clear_history">Clear History</string>
    <string name="search_chat">Search Chat</string>
    <string name="view_media">View Media</string>
    <string name="block_user">Block User</string>
    <string name="report_user">Report User</string>
    <string name="you_liked">You Liked</string>
    <string name="liked_you">Liked You</string>
    <string name="views">Views</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="hobbies">Hobbies</string>
    <string name="languages">Languages</string>
    <string name="single">Single</string>
    <string name="marriage">Married</string>
    <string name="search_city">Search City</string>
    <string name="about_us">About Us</string>
    <string name="sign_out">Sign out</string>
    <string name="faq">Faqs</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="update">Update</string>
    <string name="no_data">No Records Found</string>
    <string name="gallery_images">Gallery Images</string>
    <string name="skip"><![CDATA[Skip>>]]></string>
    <string name="like">Other Likes</string>
    <string name="liked">You Liked</string>
    <string name="payments">Payments</string>
    <string name="menu_title_profiles">Profiles</string>
    <string name="search">Search</string>
    <string name="no_records_found_criteria">No records found for the search criteria entered</string>
    <string name="selecte_dob">Select Date of Birth</string>
    <string name="alternative_mobile_number">Alternative Mobile Number</string>
    <string name="bio">Bio</string>
    <string name="fcm_key">AIzaSyCrhfd8SoE3sXe4Zr8oUxfMkfeTDM5Bc9c</string>
    <string name="send">Send</string>
    <string name="goto_settings">Go Settings</string>
    <string name="txt_error_post_notification">Error Notification</string>
    <string name="image_sizes">Image size > 480×800, 640×1136, 720×1280, 750×1334, 1080×1920, and 1440×2560</string>
    <string name="profile_image_sizes">Image size > 320×320, 480×480, 512×512,  640×640, 720×720, 1080×1080</string>
    <string name="no_profiles">No data available with your profile. Add People from Profiles page who are matching your profile</string>

    <string-array name="bankTypes">
        <item>Select Bank Type</item>
        <item>State Bank of India</item>
        <item>Punjab National Bank</item>
        <item>Bank of Baroda</item>
        <item>Canara Bank</item>
        <item>Union Bank of India</item>
        <item>Bank of India</item>
        <item>Indian Bank</item>
        <item>Central Bank of India</item>
        <item>Indian Overseas Bank</item>
        <item>UCO Bank</item>
        <item>Bank of Maharashtra</item>
        <item>Punjab \u0026 Sindh Bank</item>
    </string-array>
</resources>