<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.stranger_sparks.view.activities.ui.fragments.home.HomeFragment"
        android:label="@string/menu_title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_my_account"
        android:name="com.stranger_sparks.view.activities.ui.fragments.my_account.MyAccountFragment"
        android:label="@string/menu_title_my_account"
        tools:layout="@layout/fragment_my_account" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.stranger_sparks.view.activities.ui.fragments.settings.SettingsFragment"
        android:label="@string/menu_title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.stranger_sparks.view.activities.ui.fragments.wallet.WalletFragment"
        android:label="@string/menu_title_walet"
        tools:layout="@layout/fragment_wallet" />
    <fragment
        android:id="@+id/navigation_help"
        android:name="com.stranger_sparks.view.activities.ui.fragments.help.HelpFragment"
        android:label="@string/menu_title_help"
        tools:layout="@layout/fragment_help" />
</navigation>