<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.stranger_sparks.viewmodel.LoginViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.LoginFragment"
        android:background="@drawable/ic_app_background"
        >

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="320dp"
            android:layout_height="200dp"
            android:contentDescription="LOGO"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/img_app_logo_banner"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ivLogo"
            android:background="@drawable/top_corner_background_white"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="@dimen/_20sdp"
            android:orientation="vertical"
           >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_extrabold"
                android:text="@string/welcome_back"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/login_to_continue"
                android:textColor="@color/heading_text"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:textColorHint="@color/black"
                android:theme="@style/myTextInputLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_signin"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"

                    android:drawablePadding="@dimen/_14sdp"
                    android:drawableTint="@color/black"
                    android:hint="UserName*"

                    android:inputType="number"
                    android:fontFamily="@font/mulish_regular"
                    android:maxLength="10"
                    android:textColor="@color/heading_text"
                    android:textColorHint="@color/heading_text"
                    android:textSize="@dimen/_11sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:textColorHint="@color/black"
                android:theme="@style/myTextInputLabel"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_signin"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:hint="Password*"
                    android:fontFamily="@font/mulish_regular"
                    android:inputType="textPassword"
                    android:textColor="@color/heading_text"
                    android:textColorHint="@color/heading_text"
                    android:textSize="@dimen/_11sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_23sdp"
                android:textSize="@dimen/_12sdp"
                android:drawableTint="@color/heading_text"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/btn_curved_blue_gradiant"
                android:text="@string/login"
                android:textSize="@dimen/_14sdp"
                android:textColor="@android:color/white"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/mulish_extrabold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/do_you_forget_your_password"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/text_color"
                android:layout_marginTop="20dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/reset_here"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/blue_text"
                android:gravity="center"/>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/btn_outline_curved_blue_gradiant"
                android:text="@string/login"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/blue_inner_text"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/mulish_extrabold"/>

        </LinearLayout>


    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>